fix z-index  header

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -85,6 +85,7 @@ header nav{
     height: 100px;
     width: 100%;
     position: fixed;
+    z-index: 999;
 }
 
 .header-nav{
